--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-  <style name="LuasTheme" parent="@style/Theme.HoloEverywhereDark.Sherlock">
+  <style name="LuasTheme" >
   </style>
   
   <style name="BlueLine">
