--- a/LuasTimes/src/main/res/values/colors.xml
+++ b/LuasTimes/src/main/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="underline_color">#bebebe</color>
+
+    <color name="primary_color">#8A2BE2</color>
+    <color name="primary_color_dark">#4B0082</color>
 </resources>
