--- a/LuasTimes/src/main/res/menu/mainmenu.xml
+++ b/LuasTimes/src/main/res/menu/mainmenu.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
   
   <item android:id="@+id/menuRefresh"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:icon="@drawable/ic_action_refresh"  
         android:title="@string/btnReload" />
 
   <item android:id="@+id/menuIdSettings"
-        android:showAsAction="ifRoom"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_settings"
         android:title="@string/mainMenuSettings" />
   
   <item android:id="@+id/menuIdHelp"
-      android:showAsAction="ifRoom" 
+        app:showAsAction="ifRoom"
   		android:icon="@drawable/ic_action_help"
   		android:title="@string/mainMenuHelp" />
 </menu>
