--- a/LuasTimes/src/main/res/layout-land/times_container.xml
+++ b/LuasTimes/src/main/res/layout-land/times_container.xml
@@ -10,12 +10,26 @@
         android:layout_marginRight="@dimen/lt_view_margin"
         android:layout_weight=".5" >
 
-        <TextView
-            android:id="@+id/inboundLabel"
-            style="@style/Fill.Width"
-            android:text="@string/inbound"
-            android:textColor="@android:color/primary_text_light"
-            android:textSize="@dimen/lt_text_large" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                style="@style/Wrap"
+                android:layout_weight=".5"
+                android:text="Destination"
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="@dimen/lt_text_large" />
+
+            <TextView
+                style="@style/Wrap"
+                android:layout_weight=".5"
+                android:gravity="right"
+                android:text="Minutes"
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="@dimen/lt_text_large" />
+
+        </LinearLayout>
 
         <View style="@style/BlueLine" />
 
@@ -29,11 +43,26 @@
         android:layout_marginLeft="@dimen/lt_view_margin"
         android:layout_weight=".5" >
 
-        <TextView
-            style="@style/Fill.Width"
-            android:text="@string/outbound"
-            android:textColor="@android:color/primary_text_light"
-            android:textSize="@dimen/lt_text_large" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                style="@style/Wrap"
+                android:layout_weight=".5"
+                android:text="Destination"
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="@dimen/lt_text_large" />
+
+            <TextView
+                style="@style/Wrap"
+                android:layout_weight=".5"
+                android:gravity="right"
+                android:text="Minutes"
+                android:textColor="@android:color/primary_text_light"
+                android:textSize="@dimen/lt_text_large" />
+
+        </LinearLayout>
 
         <View style="@style/BlueLine" />
 
