--- a/LuasTimes/src/main/res/layout/times_container.xml
+++ b/LuasTimes/src/main/res/layout/times_container.xml
@@ -4,13 +4,26 @@
     style="@style/Fill.Height"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/inboundLabel"
-        style="@style/Fill.Width"
-        android:text="@string/inbound"
-        android:textColor="@android:color/primary_text_light"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        android:textSize="@dimen/lt_text_large" />
+        <TextView
+            style="@style/Wrap"
+            android:layout_weight=".5"
+            android:text="Destination"
+            android:textColor="@android:color/primary_text_light"
+            android:textSize="@dimen/lt_text_large" />
+
+        <TextView
+            style="@style/Wrap"
+            android:layout_weight=".5"
+            android:gravity="right"
+            android:text="Minutes"
+            android:textColor="@android:color/primary_text_light"
+            android:textSize="@dimen/lt_text_large" />
+
+    </LinearLayout>
 
     <View style="@style/BlueLine" />
 
@@ -19,11 +32,26 @@
         style="@style/Fill"
         android:layout_weight=".5" />
 
-    <TextView
-        style="@style/Fill.Width"
-        android:text="@string/outbound"
-        android:textColor="@android:color/primary_text_light"
-        android:textSize="@dimen/lt_text_large" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            style="@style/Wrap"
+            android:layout_weight=".5"
+            android:text="Destination"
+            android:textColor="@android:color/primary_text_light"
+            android:textSize="@dimen/lt_text_large" />
+
+        <TextView
+            style="@style/Wrap"
+            android:layout_weight=".5"
+            android:gravity="right"
+            android:text="Minutes"
+            android:textColor="@android:color/primary_text_light"
+            android:textSize="@dimen/lt_text_large" />
+
+    </LinearLayout>
 
     <View style="@style/BlueLine" />
 
