--- a/LuasTimes/src/main/res/layout/times_container.xml
+++ b/LuasTimes/src/main/res/layout/times_container.xml
@@ -4,26 +4,7 @@
     style="@style/Fill.Height"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            style="@style/Wrap"
-            android:layout_weight=".5"
-            android:text="Destination"
-            android:textColor="@android:color/primary_text_light"
-            android:textSize="@dimen/lt_text_large" />
-
-        <TextView
-            style="@style/Wrap"
-            android:layout_weight=".5"
-            android:gravity="right"
-            android:text="Minutes"
-            android:textColor="@android:color/primary_text_light"
-            android:textSize="@dimen/lt_text_large" />
-
-    </LinearLayout>
+    <include layout="@layout/include_times_header" />
 
     <View style="@style/BlueLine" />
 
@@ -32,26 +13,7 @@
         style="@style/Fill"
         android:layout_weight=".5" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            style="@style/Wrap"
-            android:layout_weight=".5"
-            android:text="Destination"
-            android:textColor="@android:color/primary_text_light"
-            android:textSize="@dimen/lt_text_large" />
-
-        <TextView
-            style="@style/Wrap"
-            android:layout_weight=".5"
-            android:gravity="right"
-            android:text="Minutes"
-            android:textColor="@android:color/primary_text_light"
-            android:textSize="@dimen/lt_text_large" />
-
-    </LinearLayout>
+    <include layout="@layout/include_times_header" />
 
     <View style="@style/BlueLine" />
 
