--- a/LuasTimes/src/main/res/layout/luas_ads.xml
+++ b/LuasTimes/src/main/res/layout/luas_ads.xml
@@ -1,39 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:ads="http://schemas.android.com/apk/res-auto"
     style="@style/Fill"
     android:orientation="vertical" >
 
     <LinearLayout
         style="@style/Fill"
-        android:paddingLeft="@dimen/lt_view_margin"
-        android:paddingRight="@dimen/lt_view_margin"
+        android:paddingLeft="@dimen/lt_container_margin"
+        android:paddingRight="@dimen/lt_container_margin"
         android:layout_marginTop="4dp"
         android:orientation="vertical">
 
-        <RelativeLayout
-            style="@style/Fill.Width"
-            >
-
-            <TextView
-                android:id="@+id/txtStopLabel"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginRight="@dimen/lt_view_margin"
-                android:textSize="@dimen/lt_text_medium"
-                android:text="@string/stop"
-                android:layout_centerVertical="true"
-                android:textColor="@android:color/primary_text_light"
-            />
-
-            <Spinner
-                android:layout_toRightOf="@+id/txtStopLabel"
-                android:layout_height="wrap_content"
-                android:layout_width="fill_parent"
-                android:id="@+id/stopSpinner"
-            />
-
-        </RelativeLayout>
+        <Spinner
+            android:layout_height="wrap_content"
+            android:layout_width="250dp"
+            android:id="@+id/stopSpinner"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+        />
 
         <LinearLayout
             style="@style/Fill.Width"
