--- a/LuasTimes/src/main/res/values/styles.xml
+++ b/LuasTimes/src/main/res/values/styles.xml
@@ -26,5 +26,10 @@
   <style name="Fill.Width" parent="@style/Fill">
     <item name="android:layout_height">wrap_content</item>
   </style>
-  
+
+  <style name="Table.Header" parent="@android:style/TextAppearance.Material.Headline">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+  </style>
+
 </resources>
